# hse-project-2026-Chronos

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build-backend.yml  ci.yml
backend/: .dockerignore  .env  .env.example  CMakeLists.txt  Dockerfile  docker-compose.yml  init-env.sh  prometheus.yml
backend/compat/: byteswap.h
backend/migrations/: init.sql
backend/models/: board.cpp  board.hpp  pomodoro_session.hpp  status.hpp  task.cpp  task.hpp  task_repository.cpp  task_repository.hpp  user.cpp  user.hpp
backend/repositories/: board_repository.cpp  board_repository.hpp  pomodoro_session_repository.cpp  pomodoro_session_repository.hpp  status_repository.cpp  status_repository.hpp  task_repository.cpp  task_repository.hpp  user_repository.cpp  user_repository.hpp
backend/src/: main.cpp
backend/src/db/: connection_pool.cpp  connection_pool.hpp  db_config.cpp  db_config.hpp  users_repo.cpp  users_repo.hpp
backend/src/security/: password_hashing.cpp  password_hashing.hpp
backend/src/server/: metrics.cpp  metrics.hpp  server.cpp  server.hpp  session.cpp  session.hpp
backend/src/server/auth/: jwt.cpp  jwt.hpp  with_auth.cpp  with_auth.hpp
backend/src/server/auth/v1/: login.cpp  login.hpp  register.cpp  register.hpp  update.cpp  update.hpp
backend/src/server/board/v1/: create.cpp  create.hpp  delete.cpp  delete.hpp  edit.cpp  edit.hpp  get.cpp  get.hpp  get_all.cpp  get_all.hpp  tasks.cpp  tasks.hpp
backend/src/server/personal/v1/: avatar_upload.cpp  avatar_upload.hpp  edit.cpp  edit.hpp  info.cpp  info.hpp
backend/src/server/pomodoro/v1/: create.cpp  create.hpp  get_user_sessions.cpp  get_user_sessions.hpp
backend/src/server/status/v1/: create.cpp  create.hpp  delete.cpp  delete.hpp  edit.cpp  edit.hpp  get_all.cpp  get_all.hpp
backend/src/server/task/v1/: create.cpp  create.hpp  delete.cpp  delete.hpp  edit.cpp  edit.hpp  get_all.cpp  get_all.hpp
backend/src/server/tasks/v1/: edit.cpp  edit.hpp
backend/src/server/users/: create_user.cpp  create_user.hpp
backend/src/server/utils/: base64.cpp  base64.hpp  response_utils.cpp  response_utils.hpp
backend/src/storage/: s3_config.cpp  s3_config.hpp  s3_uploader.cpp  s3_uploader.hpp
backend/tests/: conftest.py  pyproject.toml  status_test_helpers.py  test_board_create.py  test_board_delete.py  test_board_edit.py  test_board_get.py  test_board_get_all.py  test_board_tasks.py  test_login.py  test_register.py  test_status_create.py  test_status_delete.py  test_status_edit.py  test_status_get_all.py  test_task_create.py  test_task_delete.py  test_task_edit.py
docs/: API.md  db_schema.dbml  local_db_schema.dbml
frontend/: CMakeLists.txt
frontend/icons/: resources.qrc
frontend/include/: api_error_utils.h  blue_oval.hpp  board_card.hpp  board_create_screen.h  board_edit_screen.h  board_screen.h  circular_progress.h  dashboard_screen.hpp  dd_task_card.hpp  local_db.h  login_screen.h  main_window.h  network_manager.h  pomodoro_screen.h  profile_edit_screen.h  profile_interface.h  profile_screen.h  registration_screen.h  status_window.h  sync_manager.h  task_card.h  task_create_screen.h  task_edit_screen.h  validation_utils.h  welcome_screen.hpp
frontend/local_models/: local_board.hpp  local_pomodoro_session.hpp  local_status.hpp  local_task.hpp  local_user.hpp  sync_status.hpp
frontend/local_repositories/: local_board_repository.cpp  local_board_repository.hpp  local_pomodoro_session_repository.cpp  local_pomodoro_session_repository.hpp  local_status_repository.cpp  local_status_repository.hpp  local_task_repository.cpp  local_task_repository.hpp  local_user_repository.cpp  local_user_repository.hpp  repository_utils.hpp
frontend/sql/: local_init.sql
frontend/src/: blue_oval.cpp  board_card.cpp  board_create_screen.cpp  board_edit_screen.cpp  board_screen.cpp  circular_progress.cpp  dashboard_screen.cpp  dd_task_card.cpp  local_db.cpp  login_screen.cpp  main.cpp  main_window.cpp  network_manager.cpp  pomodoro_screen.cpp  profile_edit_screen.cpp  profile_interface.cpp  profile_screen.cpp  registration_screen.cpp  status_window.cpp  sync_manager.cpp  task_card.cpp  task_create_screen.cpp  task_edit_screen.cpp  welcome_screen.cpp
frontend/sync/: board_sync_manager.cpp  board_sync_manager.hpp  pomodoro_sync_manager.cpp  pomodoro_sync_manager.hpp  status_sync_manager.cpp  status_sync_manager.hpp  sync_coordinator.cpp  sync_coordinator.hpp  sync_json_helpers.hpp  sync_manager.hpp  task_sync_manager.cpp  task_sync_manager.hpp  user_sync_manager.cpp  user_sync_manager.hpp
